--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "icon": "svgr --ext jsx -d src/components/icons src/task/images"
   },
   "dependencies": {
     "next": "latest",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "sanitize.css": "^11.0.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
