--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
+    "@svgr/cli": "^5.3.1",
     "babel-plugin-styled-components": "^1.8.0"
   },
   "license": "ISC"
